<?xml version="1.0"?>
<package>
  <name>sm_msgs</name>
  <version>0.7.1</version>
  <description>
  This package is a msg for states of the slug.
  </description>
  <maintainer email="steveminq@utexas.edu">Minkyu Kim</maintainer>
  <license>BSD</license>
  <url type=""/url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
